supporting compressor and more one off id fixing

--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -3033,7 +3033,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   "id": "dark_prismarine",
   "input": [
     {
-      "id": "minecraft:prismarine",
+      "id": "minecraft:prismarine_shard",
       "qty": 2
     },
     {
@@ -3057,7 +3057,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   "id": "enchanted_golden_apple",
   "input": [
     {
-      "id": "minecraft:gold_block",
+      "id": "minecraft:block_of_gold",
       "qty": 8
     },
     {
