--- a/docs/blocks/machines/compressor.mdx
+++ b/docs/blocks/machines/compressor.mdx
@@ -23,3 +23,1667 @@ title: Compressor
 
 Main usage of **Compressor** is to make plates and compressed plant balls.
 
+### Crafting Recipes
+		<details>
+			<summary>Recipes using Compressor</summary>
+			<details>
+				<summary><McItem slug="techreborn:advanced_alloy_plate" /></summary>
+				<Machine config={{
+  "id": "advanced_alloy_plate",
+  "input": [
+    {
+      "id": "techreborn:advanced_alloy_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:advanced_alloy_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "advanced_alloy_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:advanced_alloy_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:advanced_alloy_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:aluminum_plate" /></summary>
+				<Machine config={{
+  "id": "aluminum_plate",
+  "input": [
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:aluminum_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "aluminum_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:aluminum_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:aluminum_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "blaze_rod",
+  "input": [
+    {
+      "id": "minecraft:blaze_powder",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:blaze_rod",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:brass_plate" /></summary>
+				<Machine config={{
+  "id": "brass_plate",
+  "input": [
+    {
+      "id": "techreborn:brass_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:brass_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "brass_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:brass_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:brass_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:bronze_plate" /></summary>
+				<Machine config={{
+  "id": "bronze_plate",
+  "input": [
+    {
+      "id": "techreborn:bronze_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:bronze_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "bronze_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:bronze_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:bronze_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "calcite",
+  "input": [
+    {
+      "id": "techreborn:calcite_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:calcite",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "carbon_plate",
+  "input": [
+    {
+      "id": "techreborn:carbon_mesh",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:carbon_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:chrome_plate" /></summary>
+				<Machine config={{
+  "id": "chrome_plate",
+  "input": [
+    {
+      "id": "techreborn:chromium_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:chrome_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "chrome_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:chromium_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:chrome_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:coal_plate" /></summary>
+				<Machine config={{
+  "id": "coal_plate",
+  "input": [
+    {
+      "id": "techreborn:coal_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:coal_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "coal_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:block_of_coal",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:coal_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "compressed_air_cell",
+  "input": [
+    {
+      "id": "techreborn:empty_cell",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:compressed_air_cell",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 250
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:compressed_plantball" /></summary>
+				<Machine config={{
+  "id": "compressed_plantball",
+  "input": [
+    {
+      "id": "techreborn:plantball_material",
+      "qty": 8
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:compressed_plantball",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 2,
+    "time": 400
+  }
+}} />
+<Machine config={{
+  "id": "compressed_plantball_from_melon",
+  "input": [
+    {
+      "id": "minecraft:melon_slice",
+      "qty": 64
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:compressed_plantball",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 2,
+    "time": 400
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "compressed_plantball_2",
+  "input": [
+    {
+      "id": "techreborn:plantball",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:compressed_plantball",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 2,
+    "time": 400
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:copper_plate" /></summary>
+				<Machine config={{
+  "id": "copper_plate",
+  "input": [
+    {
+      "id": "minecraft:copper_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:copper_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "copper_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:block_of_copper",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:copper_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:diamond_plate" /></summary>
+				<Machine config={{
+  "id": "diamond_plate",
+  "input": [
+    {
+      "id": "techreborn:diamond_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:diamond_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "diamond_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:block_of_diamond",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:diamond_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:electrum_plate" /></summary>
+				<Machine config={{
+  "id": "electrum_plate",
+  "input": [
+    {
+      "id": "techreborn:electrum_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:electrum_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "electrum_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:electrum_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:electrum_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:emerald_plate" /></summary>
+				<Machine config={{
+  "id": "emerald_plate",
+  "input": [
+    {
+      "id": "techreborn:emerald_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:emerald_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "emerald_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:block_of_emerald",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:emerald_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:gold_plate" /></summary>
+				<Machine config={{
+  "id": "gold_plate",
+  "input": [
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:gold_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "gold_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:block_of_gold",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:gold_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:invar_plate" /></summary>
+				<Machine config={{
+  "id": "invar_plate",
+  "input": [
+    {
+      "id": "techreborn:invar_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:invar_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "invar_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:invar_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:invar_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:iridium_plate" /></summary>
+				<Machine config={{
+  "id": "iridium_plate",
+  "input": [
+    {
+      "id": "techreborn:iridium_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:iridium_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "iridium_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:iridium_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:iridium_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:iron_plate" /></summary>
+				<Machine config={{
+  "id": "iron_plate",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:iron_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "iron_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:block_of_iron",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:iron_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "lapis_plate",
+  "input": [
+    {
+      "id": "minecraft:block_of_lapis_lazuli",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:lapis_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "lazurite_plate",
+  "input": [
+    {
+      "id": "techreborn:lazurite_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:lazurite_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:lead_plate" /></summary>
+				<Machine config={{
+  "id": "lead_plate",
+  "input": [
+    {
+      "id": "techreborn:lead_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:lead_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "lead_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:lead_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:lead_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:nickel_plate" /></summary>
+				<Machine config={{
+  "id": "nickel_plate",
+  "input": [
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:nickel_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "nickel_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:nickel_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:nickel_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:obsidian_plate" /></summary>
+				<Machine config={{
+  "id": "obsidian_plate",
+  "input": [
+    {
+      "id": "techreborn:obsidian_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:obsidian_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "obsidian_plate_from_block",
+  "input": [
+    {
+      "id": "minecraft:obsidian",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:obsidian_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:peridot_plate" /></summary>
+				<Machine config={{
+  "id": "peridot_plate",
+  "input": [
+    {
+      "id": "techreborn:peridot_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:peridot_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "peridot_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:peridot_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:peridot_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:platinum_plate" /></summary>
+				<Machine config={{
+  "id": "platinum_plate",
+  "input": [
+    {
+      "id": "techreborn:platinum_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:platinum_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "platinum_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:platinum_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:platinum_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "prismarine_bricks",
+  "input": [
+    {
+      "id": "minecraft:prismarine_shard",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:prismarine_bricks",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "prismarine_shard",
+  "input": [
+    {
+      "id": "minecraft:prismarine_crystals",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:prismarine_shard",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 180
+  }
+}} />
+<Machine config={{
+  "id": "quartz_plate",
+  "input": [
+    {
+      "id": "techreborn:quartz_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:quartz_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:red_garnet_plate" /></summary>
+				<Machine config={{
+  "id": "red_garnet_plate",
+  "input": [
+    {
+      "id": "techreborn:red_garnet_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:red_garnet_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "red_garnet_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:red_garnet_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:red_garnet_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "redstone_plate",
+  "input": [
+    {
+      "id": "minecraft:block_of_redstone",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:redstone_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:refined_iron_plate" /></summary>
+				<Machine config={{
+  "id": "refined_iron_plate",
+  "input": [
+    {
+      "id": "techreborn:refined_iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:refined_iron_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "refined_iron_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:refined_iron_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:refined_iron_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:ruby_plate" /></summary>
+				<Machine config={{
+  "id": "ruby_plate",
+  "input": [
+    {
+      "id": "techreborn:ruby_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:ruby_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "ruby_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:ruby_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:ruby_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:sapphire_plate" /></summary>
+				<Machine config={{
+  "id": "sapphire_plate",
+  "input": [
+    {
+      "id": "techreborn:sapphire_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:sapphire_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "sapphire_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:sapphire_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:sapphire_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<Machine config={{
+  "id": "sculk",
+  "input": [
+    {
+      "id": "minecraft:sculk_vein",
+      "qty": 16
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:sculk",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<details>
+				<summary><McItem slug="techreborn:silver_plate" /></summary>
+				<Machine config={{
+  "id": "silver_plate",
+  "input": [
+    {
+      "id": "techreborn:silver_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:silver_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "silver_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:silver_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:silver_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:steel_plate" /></summary>
+				<Machine config={{
+  "id": "steel_plate",
+  "input": [
+    {
+      "id": "techreborn:steel_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:steel_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "steel_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:steel_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:steel_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:tin_plate" /></summary>
+				<Machine config={{
+  "id": "tin_plate",
+  "input": [
+    {
+      "id": "techreborn:tin_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tin_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "tin_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:tin_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tin_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:titanium_plate" /></summary>
+				<Machine config={{
+  "id": "titanium_plate",
+  "input": [
+    {
+      "id": "techreborn:titanium_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:titanium_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "titanium_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:titanium_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:titanium_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:tungsten_plate" /></summary>
+				<Machine config={{
+  "id": "tungsten_plate",
+  "input": [
+    {
+      "id": "techreborn:tungsten_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tungsten_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "tungsten_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:tungsten_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tungsten_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:tungstensteel_plate" /></summary>
+				<Machine config={{
+  "id": "tungstensteel_plate",
+  "input": [
+    {
+      "id": "techreborn:tungstensteel_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tungstensteel_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "tungstensteel_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:tungstensteel_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tungstensteel_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:wood_plate" /></summary>
+				<Machine config={{
+  "id": "wood_plate",
+  "input": [
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:wood_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "wood_plate_from_dust",
+  "input": [
+    {
+      "id": "techreborn:saw_dust",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:wood_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:yellow_garnet_plate" /></summary>
+				<Machine config={{
+  "id": "yellow_garnet_plate",
+  "input": [
+    {
+      "id": "techreborn:yellow_garnet_dust",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:yellow_garnet_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "yellow_garnet_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:yellow_garnet_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:yellow_garnet_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+<details>
+				<summary><McItem slug="techreborn:zinc_plate" /></summary>
+				<Machine config={{
+  "id": "zinc_plate",
+  "input": [
+    {
+      "id": "techreborn:zinc_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:zinc_plate",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+<Machine config={{
+  "id": "zinc_plate_from_block",
+  "input": [
+    {
+      "id": "techreborn:zinc_storage_block",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:zinc_plate",
+      "qty": 9
+    }
+  ],
+  "tool": "techreborn:compressor",
+  "meta": {
+    "power": 10,
+    "time": 300
+  }
+}} />
+				</details>
+
+		</details>
