starting to work on supporting grinder + ae2
supporting a brand new mod with this commit and starting to bring over some images (and link to the wiki). still needs quite a bit of work, lots of missing images. mainly ores and storage blocks

--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -12799,7 +12799,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   ],
   "output": [
     {
-      "id": "techreborn:water_cell",
+      "id": "minecraft:water_cell",
       "qty": 2
     }
   ],
