fixed large majority of grinder images
fixed all the ores, all that remains are weird ones, experience looks really good imo

--- a/docs/blocks/batteries/batteries.mdx
+++ b/docs/blocks/batteries/batteries.mdx
@@ -15,7 +15,7 @@ Battery blocks are used to store energy and charge items. For an explanation of 
 - <McItem slug="techreborn:aesu" overrides={{name:"AESU"}}/>
 - <McItem slug="techreborn:idsu" overrides={{name:"IDSU"}}/>
 - <McItem slug="techreborn:lesu" overrides={{name:"LESU Controller"}}/>
-- <McItem slug="techreborn:lesu_storage" overrides={{name:"LESU Storage", image:"lesu_block"}}/>
+- <McItem slug="techreborn:lesu_storage" overrides={{name:"LESU Storage", image:"techreborn:lesu_block"}}/>
 
 ## Usage Notes
 
