--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -3091,7 +3091,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   ],
   "output": [
     {
-      "id": "minecraft:ender_eye",
+      "id": "minecraft:eye_of_ender",
       "qty": 2
     }
   ],
