--- a/docs/blocks/machines/grinder.mdx
+++ b/docs/blocks/machines/grinder.mdx
@@ -540,7 +540,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "coal",
   "input": [
     {
-      "id": "minecraft:coal_ores",
+      "id": "minecraft:coal_ore",
       "qty": 1
     }
   ],
@@ -620,7 +620,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "diamond",
   "input": [
     {
-      "id": "minecraft:diamond_ores",
+      "id": "minecraft:diamond_ore",
       "qty": 1
     }
   ],
@@ -763,7 +763,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "emerald",
   "input": [
     {
-      "id": "minecraft:emerald_ores",
+      "id": "minecraft:emerald_ore",
       "qty": 1
     }
   ],
@@ -803,7 +803,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "ender_eye_dust",
   "input": [
     {
-      "id": "minecraft:ender_eye",
+      "id": "minecraft:eye_of_ender",
       "qty": 1
     }
   ],
@@ -1126,7 +1126,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "lapis_lazuli",
   "input": [
     {
-      "id": "minecraft:lapis_ores",
+      "id": "minecraft:block_of_lapis_lazuli",
       "qty": 1
     }
   ],
@@ -1681,7 +1681,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   ],
   "output": [
     {
-      "id": "minecraft:quartz",
+      "id": "minecraft:nether_quartz",
       "qty": 2
     }
   ],
@@ -1695,7 +1695,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "quartz_dust",
   "input": [
     {
-      "id": "minecraft:quartz",
+      "id": "minecraft:nether_quartz",
       "qty": 1
     }
   ],
@@ -1715,7 +1715,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "quartz_dust_2",
   "input": [
     {
-      "id": "minecraft:quartz_block",
+      "id": "minecraft:block_of_quartz",
       "qty": 1
     }
   ],
@@ -1735,7 +1735,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "raw_copper",
   "input": [
     {
-      "id": "minecraft:copper_ores",
+      "id": "minecraft:copper_ore",
       "qty": 1
     }
   ],
@@ -1755,7 +1755,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "raw_gold",
   "input": [
     {
-      "id": "minecraft:gold_ores",
+      "id": "minecraft:gold_ore",
       "qty": 1
     }
   ],
@@ -1775,7 +1775,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "raw_iron",
   "input": [
     {
-      "id": "minecraft:iron_ores",
+      "id": "minecraft:iron_ore",
       "qty": 1
     }
   ],
@@ -2121,7 +2121,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "redstone",
   "input": [
     {
-      "id": "minecraft:redstone_ores",
+      "id": "minecraft:redstone_ore",
       "qty": 1
     }
   ],
